--- a/style.css
+++ b/style.css
@@ -1,5 +1,30 @@
-#root {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.content {
   color: #000;
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+}
+
+.episode-box {
+  width: 250px;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
 }
 
 .is-hidden {
