--- a/style.css
+++ b/style.css
@@ -5,26 +5,26 @@
 }
 
 .container {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
 }
 
 .content {
   color: #000;
-  width: 90%;
-  display: flex;
+  /* width: 90%; */
+  /* display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
-  align-content: center;
+  align-content: center; */
 }
 
 .episode-box {
-  width: 250px;
+  /* width: 250px; */
   margin: 20px;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-content: center;
+  align-content: center; */
 }
 
 .is-hidden {
@@ -33,4 +33,14 @@
 
 .highlight {
   background-color: yellow;
+}
+
+.show-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.content-show-box {
+  display: flex;
+  flex-direction: row;
 }
