--- a/width-style.css
+++ b/width-style.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 1000px) {
   body {
-    background-color: lightblue;
+    /* background-color: #f6fff8; */
   }
 
   .show-wrapper {
