--- a/style.css
+++ b/style.css
@@ -43,25 +43,23 @@ body {
 
 .root-content {
   color: #fdfffc;
+  /* text-shadow: 1px 1px 1px #000; */
   display: flex;
   flex-wrap: wrap;
   /* justify-content: space-evenly; */
   gap: 25px;
   justify-content: center;
+  /* align-self: stretch; */
 }
 
 /* ---------- show cards: ---------- */
 
 .show-wrapper {
-  /* background: rgb(2,2,5); */
-  /* background: linear-gradient(180deg, rgba(2,2,5,0.5) 22%, rgba(110,109,6,0.5) 56%, rgba(255,237,0,0.5) 100%); */
-  /* background-position: right 0 center; */
-  /* background: linear-gradient(to right bottom, hsla(111, 55%, 64%, 0.8), hsla(160, 64%, 43%, 0.8)) */
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 80vw auto;
-  /* box-shadow: 20px 20px 500px grey; */
+  box-shadow: 2px 4px 5px grey;
 
   width: 80vw;
   padding: 25px;
@@ -118,13 +116,22 @@ body {
 /* ---------- episodes cards: ---------- */
 
 .episode-wrapper {
-  background-color: bisque;
+  background-color: #01161e;
+  
+  /* background: linear-gradient(to right bottom, hsla(0, 0%, 0%, 0.8), hsla(46, 100%, 50%, 0.8)); */
   width: 250px;
+  height: 100%;
+  /* min-height: 500px; */
+  /* align-self: stretch; */
   display: flex;
   flex-direction: column;
+   /* align-self: stretch; */
+  box-shadow: 2px 4px 5px grey;
+  /* gap: 0; */
 }
 
 .title-episode-box {
+  padding: 10px 5px;
   text-align: center;
 }
 
@@ -133,11 +140,19 @@ body {
 }
 
 .img-episode-box {
-
+  height: 140px;
 }
 
 .summary-episode-box {
+  height: 100%;
+  background-image: linear-gradient(to right bottom, hsla(197, 94%, 6%, 0.8), hsla(46, 100%, 50%, 0.8)), url("img/img-bg.png");
+  background-size: 100%;
+  /* background-repeat: no-repeat; */
+ 
+  /* background: linear-gradient(to right bottom, hsla(197, 94%, 6%, 0.8), hsla(46, 100%, 50%, 0.8)); */
+  padding: 15px;
   text-align: justify;
+  /* color: #000; */
 }
 
 .summary-episode {
