--- a/css/style.css
+++ b/css/style.css
@@ -5,24 +5,24 @@
 }
 
 body {
-  color: #fdfffc;
-  background-color: #f7fff7;
+  color: var(--main-white);
+  background-color: var(--main-white);
   /* font-family: 'Noto Serif', serif; */
   /* font-family: 'Oxygen', sans-serif; */
   font-family: 'Lora', serif;
 }
 
 .home-btn {
-  background-color: #2c3e50; 
+  background-color: var(--main-black);
   border: none;
-  color: #fdfffc;
+  color: var(--main-white);
   padding: 7px 10px;
   font-size: 21px;
   cursor: pointer;
 }
 
 .home-btn:hover {
-  background-color: hsla(46, 100%, 50%, 0.8);
+  background-color: var(--main-yellow);
   /* background-color: #fcbf49 */
   /* background-color: #fdc500; */
 }
@@ -42,7 +42,7 @@ body {
   position: fixed;
   z-index: 1;
   /* background-color: hsl(46, 100%, 50%); */
-  background-color: #01161e;
+  background-color: var(--main-black);
   top: 0;
   /* padding: 0, 10px; */
   width: 100vw;
@@ -75,8 +75,8 @@ body {
   box-shadow: none;
   width: 18em;
   height: 100%;
-  color: #fdfffc;
-  background-color: #2c3e50;
+  color: var(--main-white);
+  background-color: var(--dark-grey);
   background-image: none;
   font-family: inherit;
   font-size: 13px;
@@ -88,7 +88,7 @@ body {
   height: 100%;
   min-width: 13.5em;
   margin: auto 0;
-  color: hsla(46, 100%, 50%, 0.8);
+  color: var(--light-grey);
   text-align: right;
   font-size: 13px;
   padding-right: 10px;
@@ -114,7 +114,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 80vw auto;
-  box-shadow: 2px 4px 5px grey;
+  box-shadow: 2px 4px 5px var(--light-grey);
 
   width: 80vw;
   padding: 25px;
@@ -166,12 +166,12 @@ body {
 /* ---------- episodes cards: ---------- */
 
 .episode-wrapper {
-  background-color: #01161e;
+  background-color: var(--main-black);
   width: 250px;
   height: 100%;
   display: flex;
   flex-direction: column;
-  box-shadow: 2px 4px 5px grey;
+  box-shadow: 2px 4px 5px var(--light-grey);
 }
 
 .title-episode-box {
@@ -200,25 +200,19 @@ body {
 }
 
 footer {
-  color: #01161e;
+  color: var(--main-black);
   text-align: center;
   margin: 25px;
 }
 
-footer a:link {
-  color: #01161e;
-}
-
-footer a:visited {
-  color: #01161e;
+footer a:link,
+footer a:visited,
+footer a:active {
+  color: var(--main-black);
 }
 
 footer a:hover {
-  color:hsla(46, 100%, 50%, 0.8);
-}
-
-footer a:active {
-  color: #01161e;
+  color: var(--main-yellow);
 }
 
 /* ---------- other: ---------- */
@@ -231,14 +225,14 @@ footer a:active {
 /* ---------- input field -placeholder text: ---------- */
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #8e9aaf;
+  color: var(--light-grey);
   opacity: 1; /* Firefox */
 }
 
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-  color: #8e9aaf;
+  color: var(--light-grey);
 }
 
 ::-ms-input-placeholder { /* Microsoft Edge */
-  color: #8e9aaf;
+  color: var(--light-grey);
 }
