--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@ body {
 .fields-wrapper {
   display: flex;
   justify-content: start;
-  gap: 0.3em;
+  /* gap: 0.3em; */
+  row-gap: 0.3em;
   flex-wrap: wrap;
 }
 
