--- a/css/variables.css
+++ b/css/variables.css
@@ -6,4 +6,6 @@
   --light-grey: #8e9aaf;
   --dark-grey:#2c3e50;
   --gradient: linear-gradient(to right bottom, hsla(197, 94%, 6%, 0.8), hsla(46, 100%, 50%, 0.8)), url("/img/img-bg.png");
+
+  --cards-border: 1.56em;
 }
