--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
   color: var(--main-white);
   background-color: var(--main-white);
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
 }
 
 .home-btn {
@@ -27,7 +27,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  /* gap: 0.3em; */
   overflow: hidden;
   position: fixed;
   z-index: 1;
@@ -39,7 +38,6 @@ body {
 .fields-wrapper {
   display: flex;
   justify-content: flex-start;
-  /* gap: 0.3em; */
   row-gap: 0.3em;
   flex-wrap: wrap;
 }
@@ -51,7 +49,8 @@ body {
 }
 
 .selector,
-.input, textarea {
+.input,
+textarea {
   outline: 0;
   border: 0;
   box-shadow: none;
@@ -67,7 +66,7 @@ body {
 
 .display-num-of-movies {
   height: 100%;
-  min-width: 10.5em;
+  width: 8em;
   color: var(--light-grey);
   text-align: right;
   font-size: 13px;
@@ -91,21 +90,21 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 80vw auto;
+  background-size: 95vw auto;
   box-shadow: 2px 4px 5px var(--light-grey);
-
-  width: 80vw;
+  width: 95vw;
+  min-width: 300px;
   padding: var(--cards-border);
-
   height: 100%;
   display: grid;
   grid-gap: var(--cards-border);
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto auto auto;
-  grid-template-areas: 
-    "ttl ttl"
-    "img inf"
-    "sum sum";
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: auto auto auto auto;
+  grid-template-areas:
+    "ttl"
+    "img"
+    "inf"
+    "sum";
 }
 
 .title-show-box {
@@ -115,6 +114,9 @@ body {
 
 .img-show-box {
   grid-area: img;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .summary-show-box {
@@ -133,7 +135,6 @@ body {
 .summary-show {
   font-weight: 400;
   letter-spacing: 0.5px;
-
 }
 
 .info-show-list {
@@ -186,7 +187,6 @@ body {
 }
 
 .summary-episode {
-  
 }
 
 footer {
@@ -205,9 +205,7 @@ footer a:hover {
   color: var(--yellow);
 }
 
-
 /* ---------- other: ---------- */
-
 
 .is-hidden {
   display: none;
@@ -215,15 +213,18 @@ footer a:hover {
 
 /* ---------- input field -placeholder text: ---------- */
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: var(--light-grey);
   opacity: 1; /* Firefox */
 }
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
   color: var(--light-grey);
 }
 
-::-ms-input-placeholder { /* Microsoft Edge */
+::-ms-input-placeholder {
+  /* Microsoft Edge */
   color: var(--light-grey);
 }
